# asset-manager

./: .gitignore  Cargo.toml  README.md  run.bat
.cargo/: config.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/asset/: mod.rs  models.rs
core/src/plugin/: loader.rs  manager.rs  mod.rs
core/src/storage/: json.rs  mod.rs  sqlite.rs
plugins/stats_helper/: init.lua
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
ui/: index.html  package.json
ui/src/: App.vue  style.css
