[workspace]
resolver = "2"
members = [
    "src-tauri",
    "core",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["mayzuishuai"]
repository = "https://github.com/mayzuishuai/asset-manager"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Lua plugin system
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "async", "send"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }
