[package]
name = "asset-manager-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Asset Manager - asset models, plugin system, and storage"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
mlua.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
