[package]
name = "asset-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Asset Manager - Tauri Desktop Application"
default-run = "asset-manager"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Core library
asset-manager-core = { path = "../core" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "asset-manager"
path = "src/main.rs"
